[package]
name = "datomish"
version = "0.4.0"
authors = ["Richard Newman <rnewman@twinql.com>", "Nicholas Alexander <nalexander@mozilla.com>"]

[dependencies]
[dependencies.edn]
  path = "edn"

[dependencies.datomish_query_parser]
  path = "query-parser"

[dependencies.datomish_query]
  path = "query"

[dev-dependencies]
[dev-dependencies.datomish_cli]
  path = "cli"

[[bin]]
name = "datomish-cli"
path = "cli/src/main.rs"
